Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,6 +35,46 @@
 <a name="welcome-to-the-page-for-itpg-gt-2517-001--data-science-storytelling" class="anchor" href="#welcome-to-the-page-for-itpg-gt-2517-001--data-science-storytelling"><span class="octicon octicon-link"></span></a>Welcome to the page for ITPG-GT 2517 001  Data Science Storytelling</h3>
 
 <p>This class meets Wednesday 6:30 p.m. to 9:00 p.m.  (weeks 1-7 only).</p>
+
+<ul>
+<li>Your instructor is <a href="http://hilarymason.com">Hilary Mason</a>
+</li>
+<li>Contact email: me at hilarymason dot com (or hmason at nyu dot edu)</li>
+<li>github repo: <a href="https://github.com/hmason/datastorytelling">https://github.com/hmason/datastorytelling</a>
+</li>
+</ul><h3>
+<a name="data-storytelling" class="anchor" href="#data-storytelling"><span class="octicon octicon-link"></span></a>Data Storytelling</h3>
+
+<p>This short course is an exploration of the line between data analysis and storytelling. How do we find the interesting stories in data, and how do we communicate them in a compelling way, with respect to the data?</p>
+
+<h3>
+<a name="logistics" class="anchor" href="#logistics"><span class="octicon octicon-link"></span></a>Logistics</h3>
+
+<p>We'll be using <a href="github.com">github</a> to collaborate and share work during this course. Github provides wonderful tools while also reinforcing good software engineering practices.</p>
+
+<h3>
+<a name="schedule" class="anchor" href="#schedule"><span class="octicon octicon-link"></span></a>Schedule</h3>
+
+<p>We have seven short weeks to explore!</p>
+
+<p><strong>week 0</strong> - Introduction and Philosophy</p>
+
+<ul>
+<li>philosophy of data science</li>
+<li>introductions</li>
+<li>ipython, github, and a simple analysis</li>
+<li>homework: get everything installed, work through the bridges and tunnels analysis and commit it to github</li>
+</ul><p><strong>week 1</strong> - Tools and process</p>
+
+<p><strong>week 2</strong> - Error metrics and process</p>
+
+<p><strong>week 3</strong> - Markov Chains and art</p>
+
+<p><strong>week 4</strong> - Algorithms for Data Exploration</p>
+
+<p><strong>week 5</strong> - Data Product Design</p>
+
+<p><strong>week 6</strong> - Final project presentations</p>
       </section>
     </div>
 
