Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -68,11 +68,17 @@
 
 <p><strong>week 2</strong> - Error metrics and process</p>
 
-<p><strong>week 3</strong> - Markov Chains and art</p>
+<ul>
+<li>Guest speaker: <a href="http://mediaevolution.se/theconference/speaker/mike-dewar/">Mike Dewar</a>, New York Times R&amp;D</li>
+</ul><p><strong>week 3</strong> - Markov Chains and art</p>
 
-<p><strong>week 4</strong> - Algorithms for Data Exploration</p>
+<ul>
+<li>Guest speaker: <a href="http://shron.net/">Max Shron</a>, Data Strategist</li>
+</ul><p><strong>week 4</strong> - Algorithms for Data Exploration</p>
 
-<p><strong>week 5</strong> - Data Product Design</p>
+<ul>
+<li>Guest speaker: <a href="http://giladlotan.com/">Gilad Lotan</a>, Chief Scientist at Betaworks</li>
+</ul><p><strong>week 5</strong> - Data Product Design</p>
 
 <p><strong>week 6</strong> - Final project presentations</p>
       </section>
