Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <li>philosophy of data science</li>
 <li>introductions</li>
 <li>ipython, github, and a simple analysis</li>
-<li>homework: get everything installed, work through the bridges and tunnels analysis and commit it to github</li>
+<li>homework: <a href="http://ipython.org/ipython-doc/stable/install/install.html">get everything installed</a>, work through the bridges and tunnels analysis and commit it to github</li>
 </ul><p><strong>week 1</strong> - Tools and process</p>
 
 <p><strong>week 2</strong> - Error metrics and process</p>
