Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -66,10 +66,16 @@
 <li>homework: <a href="http://ipython.org/ipython-doc/stable/install/install.html">get everything installed</a>, work through the bridges and tunnels analysis and commit it to github</li>
 </ul><p><strong>week 1</strong> - Tools and process</p>
 
-<p><strong>week 2</strong> - Error metrics and process</p>
+<ul>
+<li>is <a href="http://qz.com/122921/the-chart-tim-cook-doesnt-want-you-to-see/">this graph</a> misleading?</li>
+<li>software engineering process and tools -- how to submit pull requests (and why you would ever want to)</li>
+<li>a few command-line utilities -- grep, awk, wc</li>
+<li>a very simple intro to statistics using NYC restaurant health inspection data</li>
+</ul><p><strong>week 2</strong> - Error metrics and process</p>
 
 <ul>
 <li>Guest speaker: <a href="http://mediaevolution.se/theconference/speaker/mike-dewar/">Mike Dewar</a>, New York Times R&amp;D</li>
+<li>Scraping and cleaning data</li>
 </ul><p><strong>week 3</strong> - Markov Chains and art</p>
 
 <ul>
