Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -85,10 +85,15 @@
 
 <ul>
 <li>Guest speaker: <a href="http://shron.net/">Max Shron</a>, Data Strategist</li>
-</ul><p><strong>week 4</strong> - Algorithms for Data Exploration</p>
+<li>Sad AI or conceptual art? Let's talk about <a href="https://twitter.com/horse_ebooks">@horse_ebooks</a>
+</li>
+<li>We're going to explore probability and a few probabilistic data structures</li>
+<li>Final project discussion! </li>
+</ul><p><strong>week 4</strong> - Algorithms for Data Classification</p>
 
 <ul>
 <li>Guest speaker: <a href="http://giladlotan.com/">Gilad Lotan</a>, Chief Scientist at Betaworks</li>
+<li>Bayes law and the naive bayes classifier</li>
 </ul><p><strong>week 5</strong> - Data Product Design</p>
 
 <p><strong>week 6</strong> - Final project presentations</p>
